Improved layout of chart to prevent overlap.

--- a/src/app/age-chart/age-chart.component.css
+++ b/src/app/age-chart/age-chart.component.css
@@ -2,6 +2,5 @@ body {
   font-size: 16px;
 }
 .chart-container {
-  height: 400px;
-  width: 400px;
+  display: block;
 }
